--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "webhook": "https://discord.com/api/webhooks/XXXXXXXXXXXXXXXXXXXXX",
-  "message": "Your message"
+  "webhook": "https://discord.com/api/webhooks/xxxxxxxx/xxxxxxxxxxxxxx",
+  "message": "Your message here"
 }
